# pandas-pyarrow

./: .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-merge-dependabot.yml  auto_merge_dependabot_prs.yml  ci.yml  code-checks.yml  codecov.yml  copilot-setup-steps.yml  docs.yml  publish.yml
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst  introduction.rst  usage.rst
docs/source/extras/: extras.rst
pandas_pyarrow/: __init__.py  pda_converter.py  reverse_converter.py
pandas_pyarrow/mappers/: __init__.py  datetime_mapper.py  dtype_mapper.py  nested_mapper.py  numeric_mapper.py
schemarrow/: __init__.py  schema_arrow.py
schemarrow/mappers/: __init__.py  datetime_mapper.py  db_types.py  dtype_mapper.py  numeric_mapper.py
tests/: pb_sts.py
tests/docs/: test_docs.py
tests/intg/: test_db_date_dtypes.py  test_db_dtypes.py  test_db_general_dtypes.py
tests/unit/: pb_tests.py  test_add_dtypes_mapper_types.py  test_dt_types.py  test_dtype_exists.py  test_nested_types.py  test_numeric_types.py  test_object_types.py  test_reverse_converter.py  test_reverse_mapper.py
tests/unit/date_time/: test_dt_types.py  test_dt_tz_types.py  test_timedelta_types.py
tests/unit/property_based/: pb_sts.py  test_dt.py  test_general.py  test_numeric.py
