[tool.poetry]
name = "pandas-pyarrow"
version = "0.0.0"
description = "A library for switching pandas backend to pyarrow"
authors = ["DanielAvdar <66269169+DanielAvdar@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DanielAvdar/pandas-pyarrow"
repository = "https://github.com/DanielAvdar/pandas-pyarrow"
documentation = "https://github.com/DanielAvdar/pandas-pyarrow"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
keywords = [
    "python",
    "pandas",
    "pyarrow",
    "arrow",
    "dataframe",
    "bigquery",
    "pandas-pyarrow",
    "pandas-arrow",
]
packages = [{ include = "pandas_pyarrow", from = "." }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = ">=2"
pyarrow = ">=7.0.0, <=15.0.0"
db-dtypes = { extras = ["db-dtypes"], version = ">=1" }
pandas-gbq = { extras = ["bigquery"], version = ">=0.15.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">= 7.1.2"
hypothesis = ">= 6.23.3"
pre-commit = ">= 2.20.0"
pytest-cov = ">= 4.0.0"
mypy = ">= 0.991"
pytest-parametrization = "^2022"
types-pytz = "*"
pandas-stubs = "*"
ruff = "^0.3.1"

[tool.poetry.extras]
db-dtypes = ["db-dtypes"]
pandas-gbq = ["bigquery"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "tests/**", "pandas_pyarrow/**", ]

[tool.ruff.lint]
select = ["F", "B", "I", "F", "W", "E", "A", "N"]

fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party", ]
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false


[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
