[project]
name = "pandas-pyarrow"
dynamic = ["version"]
description = "A library for switching pandas backend to pyarrow"
authors = [
    { name = "DanielAvdar", email = "66269169+DanielAvdar@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
keywords = [
    "python",
    "pandas",
    "pyarrow",
    "arrow",
    "dataframe",
    "bigquery",
    "pandas-pyarrow",
    "pandas-arrow",
]
requires-python = ">=3.9,<4"
dependencies = [
    "pandas>=2",
    "pyarrow>=10.0.1",
]

[project.urls]
Homepage = "https://github.com/DanielAvdar/pandas-pyarrow"
Repository = "https://github.com/DanielAvdar/pandas-pyarrow"
Documentation = "https://github.com/DanielAvdar/pandas-pyarrow"

[tool.hatch.build.targets.sdist]
only-include = ["pandas_pyarrow"]
source = "."

[tool.hatch.build.targets.wheel]
only-include = ["pandas_pyarrow"]
source = "."

[project.optional-dependencies]
db-dtypes = ["db-dtypes>=1"]
all = ["db-dtypes>=1", "pandas-gbq>=0.15.0"]
bigquery = ["pandas-gbq"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "hypothesis>=6.23.3",
    "pytest-cov>=4.0.0",
    "mypy>=0.991",
    "ruff>=0.3.1",
]
docs = [
    "sphinx>=8.2.0; python_version >= '3.11'",
    "sphinx>=7.0.0; python_version < '3.11'",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "tests/**", "pandas_pyarrow/**", ]

[tool.ruff.lint]
select = ["F", "B", "I", "F", "W", "E", "A", "N"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party", ]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false
